css/main.css
body {
	font-size: 20px;
	line-height: 26px;
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	color: #333;
}

h1, h2{
	margin: 0;
	font-size: 50px;
	line-height: 55px;
	font-family: 'Poppins', serif;
	font-weight: 600;
	letter-spacing: -1px;
}

h2 {
	font-size: 40px;
	font-weight: 500;
}

h3, h4, h5{
	margin: 0;
}

h3 {
    font-weight: 400;
	font-size: 22px;
	line-height: 26px;
}

h4{
	font-size: 18px;
	font-weight: 700;
}

h5{
	font-size: 16px;
	font-weight: 400;
}

a {
	color: #58A2D8;
	text-decoration: none;
	font-weight: 400;
}

a:hover{
	color: #333;
	text-decoration: underline;
}

a.button{
	display: inline-block;
	line-height: 25px;
    margin: 20px 0;
	padding: 15px;
	background-color: #58A2D8;
	border-radius: 3px;
	text-shadow: none;
	color: white;
	font-size: 20px;
	opacity: 0.8;
	border: 1px solid #58A2D8;
}

a.button:hover{
	text-decoration: none;
	opacity: 1;
}

a.button.hollow{
	background-color: transparent;
	color: #58A2D8;
	opacity: 1;
}

a.button.hollow:hover{
	background-color: #58A2D8;
	color: white !important;
}

hr {
	margin: 40px auto 40px;
	border: none;
	border-bottom: 1px solid #ccc;
}

section{
	padding-top: 50px;
}

b, strong{
  color: #333;
  font-weight: 400;
}

iframe {
  max-width: 100%;
}

.red{
  color: #F26565;
}

.well{
  clear: both;
  padding: 40px 50px;
  margin: 40px -20px;
  font-size: 16px;
  line-height: 22px;
  color: #666;
}

.col3{
  width: 33%;
  padding: 0 10px;
  float: left;
  box-sizing: border-box;
}

ol {
  font-size: 16px;
  font-weight: 400;
  color: #333;
  }
  

/* UTILITY */
.clear-left {
	clear: left;
}
.clear-right {
	clear: right;
}
.clear-both {
	clear: both;
}
img.right{
  float: right;
}
img.left{
  float: left;
}
img {
  max-width: 100%;
}

/* HEADER */
#header{
	height: 75px;
	padding: 25px 0 0 30px;
}

#header *{
	height: 50px
}

.fixed-header {
  padding-top: 100px;
}

.fixed-header #header{
  position: fixed;
  top: 0;
  z-index: 10;
  height: 50px;
  padding-top: 10px;
  padding-bottom: 10px;
  box-shadow: 0px 3px 5px rgba(0,0,0,.25);
  width: 100%;
  background-color: white;
  box-sizing: border-box;
}

.fixed-header #header *{
  height: 30px
}

nav{
	float: right;
	line-height: 50px;
}

.fixed-header nav {
  line-height: 30px;
}

nav a{
	margin-right: 30px;
	font-size: 20px;
	font-weight: bold;
}

nav a:hover{
    text-decoration: none;
    color: #333;
}

#menu:hover {
	cursor: pointer;
}

#menu{
    display: none;
    text-align: right;
}

#announcement{
	background-color: #595959;
	font-size: 18px;
	font-weight: bold;
	padding: 5px 0 10px;
	text-align: center;
	color: white;
}

#announcement a{
	color: #57a1d7;
}

/* HOME VIDEO */
#home-video, #home-video #page-title{
	width: 100%;
	height: calc( 100% - 100px );
	overflow: hidden;
}

#home-video #page-title{
	position: absolute;
	top: 100px;
	left: 0;
	background-image: url(../images/video-mask.png);
	background-size: cover;
	color: white;
	text-shadow: 0 0 5px black;
}

#home-video #page-title div, #home-video #scroll-indicator{
	position: absolute;
}

#home-video #page-title div{
	padding: 0 30% 100px 50px;
	bottom: 0;
}

#home-video #page-title p{
	margin: 0px;
}

#home-video #page-title #company{
    display: inline-block;
	border-bottom: 1px solid white;
	padding-bottom: 10px;
	}

#home-video #scroll-indicator{
	width: 100%;
	opacity: 0;
	margin: 0 0 20px -50px;
	font-size: 26px;
	line-height: 30px;
	font-weight: bold;
	color: #58A2D8;
	text-align: center;
}

#scroll-indicator a:hover {
  color: #58A2D8;
  text-decoration: none;
}

/* FOOTER */
footer{
  padding: 40px 80px;
  background-color: #EFF1F2;
  font-size: 16px;
  line-height: 22px;
  clear: both;
}

footer h4{
  font-size: 16px;
}

footer h4 a {
  color: #333;
  font-weight: 700;
}

footer > div{
  width: calc( 25% - 40px );
  float: left;
  padding: 0 20px;
}

footer > hr{
  clear: both;
  margin: 0px 20px 40px;
}

footer img.logo{
  padding: 0px 20px;
  }

footer iframe.twitter-timeline{
  min-height: 395px !important;
}

footer p.legal{
  clear: both;
  color: #999;
  width: 75%;
  margin: auto;
  text-align: center;
}

/* PORTFOLIO */
#featured-projects, #all-projects {
  text-align: center;
	background-color: #EFF1F2;
	padding-bottom: 20px;
}

#featured-projects .button{
	margin: 20px
}

#project-grid{
	margin: 10px 40px;
	padding-bottom: 0px;
}

#project-grid a.project{
	padding: 20px 20px 10px 20px;
	margin: 20px;
	width: calc( 50% - 85px );
	min-width: 260px;
	color: #333;
	height: 290px;
	display: inline-block;
	background-color: white;
	border-radius: 3px;
}

.grid-image{
	height: 220px;
	width: 100%;
	margin-bottom: 10px;
	background-size: 975px 305px;
	background-position: top left;	
  transition: all 0.5s ease-in-out;
	-webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
}

a.project:hover .grid-image{
  background-position: bottom right;
	transition: all 5s ease-in-out;
	-webkit-transition: all 5s ease-in-out;
	-moz-transition: all 5s ease-in-out;
	-o-transition: all 5s ease-in-out;
}

#project-list {
  margin: 10px 40px;
}

.project-short {
  max-width: 980px;
  background-color: white;
  margin: 0 auto 40px;
  padding: 20px;
}

.project-short .banner-image {
  display: block;
  margin: 0 auto 20px;
}

.project-short p {
  text-align: left;
}

.project-short h4 a {
  color: #333;
  font-weight: 700;
}

/* CLIENTS */
#clients{
	margin: 0 40px;
}

#clients h4{
	text-indent: 20px;
	text-align: center;
}

#clients div{
	text-align: center;
	margin-top: 20px;
}

#clients .section-title{
    margin-top: 0px;
    }

#clients img{
	margin: 20px;
}

/* TOOLS */
#tools{
  margin: 10px 60px;
  padding-bottom: 40px;
}

#tools {
  padding-top: 10px;
}

#tools .section-title{
  text-align: center;
}

.tool{
  max-width: 980px;
  margin: 36px auto;
  clear: both;
  padding: 20px;
}

.tool div, .element div{
  padding: 0 30px;
  display: table-cell;
  vertical-align: middle;
  height: 250px;
}

.tool h4{
  font-size: 20px;
}
/* ... */

